--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             s.parentNode.insertBefore(c, s);
         })(document);
     </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
@@ -46,10 +47,12 @@
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Brand -->
         <div class="navbar-brand logoNav">
-            <p>Cocorita Deco-Hogar</p>
+            <a class="navbar-brand logoNav" href="./index.html">
+                <p>Cocorita Deco-Hogar</p>
+            </a>
         </div>
         <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -74,12 +77,12 @@
             </ul>
         </div>
     </nav>
-    
+
     <!-- BANNER --------------------------------------------------------------------------------------------->
     <section class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="tituloIndex text-center">Cocorita Deco-Hogar</h1>
-            <h2> Tienda Online</h2>
+            <h2 class=" animate__animated animate__swing"> Tienda Online</h2>
             <article class="text-center">
                 <p>Envíos a todo el país</p>
                 <p>Compra mínima $3000</p>
@@ -89,11 +92,9 @@
                         <i class=".btn-secondary" aria-hidden="true"></i> Ir a productos
                     </a>
                 </div>
-                <!-- <button type="button" class="btn btn-secondary"> Ir a Productos</button> -->
             </article>
         </div>
     </section>
-    <!-- PRODUCTOS --------------------------------------------------------------------------------------->
 
     <!-- CAROUSEL--------------------------------------------------------------------------------------- -->
     <section class="container-fluid">
@@ -109,45 +110,45 @@
                 </ol>
                 <div class="container carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/galeria-index/img1.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/galeria-index/img1.jpeg" class="d-block w-100" alt="habitacion/cocina" class="imgBanner">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Cocina</h5>
+                            <h3>Cocina</h3>
                             <p>“La cocina de autor es poner tu personalidad en lo que haces y ese sentimiento la
                                 convierte en algo distinto.”</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/galeria-index/img2.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/galeria-index/img2.jpeg" class="d-block w-100" alt="habitacion/dormitorio" class="imgBanner">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Dormitorio</h5>
+                            <h3>Dormitorio</h3>
                             <p>"Sueña en grande mientras duermes, y aún más grande cuando estás despierto"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/galeria-index/img3.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/galeria-index/img3.jpeg" class="d-block w-100" alt="habitacion/living" class="imgBanner">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Living</h5>
+                            <h3>Living</h3>
                             <p>"Cree en ti y todo será posible"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/galeria-index/img4.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/galeria-index/img4.jpeg" class="d-block w-100" alt="habitacion/baño" class="imgBanner">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Baño</h5>
+                            <h3>Baño</h3>
                             <p>"Cree en ti y todo será posible"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/galeria-index/img5.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/galeria-index/img5.jpeg" class="d-block w-100" alt="habitacion/oficina o sala de estudio" class="imgBanner">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Sala de Estudio</h5>
+                            <h3>Sala de Estudio</h3>
                             <p>"Cree en ti y todo será posible"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/galeria-index/img6.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/galeria-index/img6.jpeg" class="d-block w-100" alt="habitacion/patio externo con galeria hecha de plantas" class="imgBanner">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Jardin/Exterior</h5>
+                            <h3>Jardin/Exterior</h3>
                             <p>"Cree en ti y todo será posible"</p>
                         </div>
                     </div>
@@ -167,38 +168,34 @@
     </section>
 
     <!-- BOTONES MEDIO DE PAGO ---------------------------------------------------------------------------->
-    <section class="botonesPago container p-3">
-        <div class="row">
-            <div class="col">
-                <h4 class="text-center">
-                    Nuestros medios de pago
-                </h4>
-            </div>
-        </div>
-        <div class="row">
-            <div class="mediosDePago col-lg-3 col-md-4 col-sm-12">
-                <h5>Tarjetas de Credito</h5>
-                <p>Consulta por los medios de pago</p>
-            </div>
-            <div class="mediosDePago col-lg-3 col-md-4 col-sm-12">
-                <h5>Tarjetas de Debito</h5>
-                <p>Consulta por los medios de pago</p>
-            </div>
-            <div class="mediosDePago col-lg-3 col-md-4 col-sm-12">
-                <h5>Transferencias Bancarias</h5>
-                <p>Consulta por los medios de pago</p>
-            </div>
-            <div class="mediosDePago col-lg-3 col-md-4 col-sm-12">
-                <h5>Efectivo</h5>
-                <p>Consulta por los medios de pago</p>
-            </div>
-        </div>
+    <h2>Nuestros Medios de Pago</h2>
+    <section class="mediosDePago">
+        <article class="botonPago">
+            <p>
+            Tarjetas de Credito
+            </p>
+        </article>
+        <article class="botonPago">
+            <p>
+            Tarjetas de Debito
+            </p>
+        </article>
+        <article class="botonPago">
+        <p>
+            Transferencias Bancarias
+        </p>
+        </article>
+        <article class="botonPago">
+            Efectivo
+        </article>
     </section>
+
+
     <!-- MINI FORMULARIO----------------------------------------------------------------------------- -->
     <section class="container">
         <div class="row shadow p-3 mb-5 bg-white rounded p-5">
             <article class="col-12 ">
-                <h5 class="tituloMiniForm text-center">Recibí nuestro Catálogo Online</h5>
+                <h4 class="tituloMiniForm text-center">Recibí nuestro Catálogo Online</h4>
                 <p class="textMiniForm">Ingresa tu mail para que podamos enviarte mensualmente nuestro
                     catalogo online con todas las novedades, y puedas hacer tus pedidos de una forma mas sencilla.</p>
                 <form action="">
@@ -234,9 +231,9 @@
                 </article>
             </div>
             <div class="row">
-                
+
                 <article class="col-lg-12 col-md-12 col-sm-12 align-self-stretch bd-highlight">
-                    <h6 class="font-weight-lighter">Suscríbete para recibir todas las novedades</h6>
+                    <h5 class="font-weight-lighter">Suscríbete para recibir todas las novedades</h5>
                 </article>
                 <div class="col-lg-9 col-md-9 col-sm-9 mb-3  align-self-stretch bd-highlight">
                     <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
@@ -267,13 +264,12 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
-
 </html>
