--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,8 +25,11 @@
     <!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Brand -->
-        <p class="logoNav navbar-brand">Cocorita Deco-Hogar</p>
-
+        <div class="navbar-brand logoNav">
+            <a class="navbar-brand logoNav" href="../index.html">
+                <p>Cocorita Deco-Hogar</p>
+            </a>
+        </div>
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
