--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -25,8 +25,11 @@
     <!-- HEADER-NAVBAR ----------------------------------------------------------------------------------------->
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Brand -->
-        <p class="logoNav navbar-brand">Cocorita Deco-Hogar</p>
-
+        <div class="navbar-brand logoNav">
+            <a class="navbar-brand logoNav" href="../index.html">
+                <p>Cocorita Deco-Hogar</p>
+            </a>
+        </div>
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -68,7 +71,7 @@
                 <h2 class="subtitulosNos">Nuestra Historia</h2>
             </div>
             <div class="col-12">
-                <p class="shadow-sm p-3 mb-5 bg-white rounded text-center">
+                <p class="parrafoNos p-3 mb-5 bg-white rounded text-center">
                     Hola a todos, somos Damián y Carolina y estamos orgullosos de presentar nuestro proyecto
                     "Cocorita
                     Deco-Hogar". Comenzamos en el años 2019 realizando compras por pedido y luego comenzamos a
@@ -88,7 +91,7 @@
                 <h2 class="subtitulosNos">Nuestro Objetivo</h2>
             </div>
             <div class="col-12">
-                <p class="shadow-sm p-3 mb-5 bg-white rounded text-center">
+                <p class="parrafoNos p-3 mb-5 bg-white rounded text-center">
                     Nuestro objetivo es desarrollar un estilo de venta en el cuales los beneficiados siempre sean
                     nuestros clientes, diferenciándonos, no sólo por la calidad de nuestros productos, sino también por
                     la velocidad en la entrega.
@@ -144,8 +147,6 @@
                 </section>
         </section>
     </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
